test: use Android-compatible file read in Drive 401 regression